--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -8,7 +8,7 @@
 <link rel="icon" type="image/png" href="{{ base_path }}/images/greek_flag.png" sizes="32x32"/>
 <link rel="icon" type="image/png" href="{{ base_path }}/images/greek_flag.png" sizes="192x192"/>
 <link rel="manifest" href="{{ base_path }}/images/manifest.json"/>
-<link rel="icon" href="/images/favicon.ico"/>
+<link rel="icon" href="/images/greek_flag.png"/>
 <meta name="theme-color" content="#ffffff"/>
 <link rel="stylesheet" href="{{ base_path }}/assets/css/academicons.css"/>
 
